--- a/package.json
+++ b/package.json
@@ -1,38 +1,75 @@
-{
-  "name": "fantasy-football-tracker",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@netlify/functions": "^2.6.0",
-    "@supabase/supabase-js": "^2.39.7",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
-    "yahoo-fantasy": "^5.2.2",
-    "zustand": "^4.5.2"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
-  }
-}
+2:29:58 PM: Failed during stage 'building site': Build script returned non-zero exit code: 2 (https://ntl.fyi/exit-code-2)
+2:29:58 PM: Netlify Build                                                 
+2:29:58 PM: ────────────────────────────────────────────────────────────────
+2:29:58 PM: ​
+2:29:58 PM: ❯ Version
+2:29:58 PM:   @netlify/build 29.55.5
+2:29:58 PM: ​
+2:29:58 PM: ❯ Flags
+2:29:58 PM:   accountId: 67227eb04628041e045f915b
+2:29:58 PM:   baseRelDir: true
+2:29:58 PM:   buildId: 6733abf7734a2000085d1d39
+2:29:58 PM:   deployId: 6733abf7734a2000085d1d3b
+2:29:58 PM: ​
+2:29:58 PM: ❯ Current directory
+2:29:58 PM:   /opt/build/repo
+2:29:58 PM: ​
+2:29:58 PM: ❯ Config file
+2:29:58 PM:   /opt/build/repo/netlify.toml
+2:29:58 PM: ​
+2:29:58 PM: ❯ Context
+2:29:58 PM:   production
+2:29:58 PM: ​
+2:29:58 PM: build.command from netlify.toml                               
+2:29:58 PM: ────────────────────────────────────────────────────────────────
+2:29:58 PM: ​
+2:29:58 PM: $ npm run build
+2:29:58 PM: > fantasy-football-tracker@0.0.0 build
+2:29:58 PM: > vite build
+2:29:58 PM: sh: 1: vite: not found
+2:29:58 PM: ​
+2:29:58 PM: "build.command" failed                                        
+2:29:58 PM: ────────────────────────────────────────────────────────────────
+2:29:58 PM: ​
+2:29:58 PM:   Error message
+2:29:58 PM:   Command failed with exit code 127: npm run build (https://ntl.fyi/exit-code-127)
+2:29:58 PM: ​
+2:29:58 PM:   Error location
+2:29:58 PM:   In build.command from netlify.toml:
+2:29:58 PM:   npm run build
+2:29:58 PM: ​
+2:29:58 PM:   Resolved config
+2:29:58 PM:   build:
+2:29:58 PM:     command: npm run build
+2:29:58 PM:     commandOrigin: config
+2:29:58 PM:     environment:
+2:29:58 PM:       - SUPABASE_SERVICE_KEY
+2:29:58 PM:       - VITE_APP_URL
+2:29:58 PM:       - VITE_SUPABASE_ANON_KEY
+2:29:58 PM:       - VITE_SUPABASE_URL
+2:29:58 PM:       - VITE_YAHOO_CLIENT_ID
+2:29:58 PM:       - VITE_YAHOO_CLIENT_SECRET
+2:29:58 PM:       - VITE_YAHOO_LEAGUE_KEY
+2:29:58 PM:       - NODE_VERSION
+2:29:58 PM:       - NODE_ENV
+2:29:58 PM:     processing:
+2:29:58 PM:       skip_processing: false
+2:29:58 PM:     publish: /opt/build/repo/dist
+2:29:58 PM:     publishOrigin: config
+2:29:58 PM:   functions:
+2:29:58 PM:     '*':
+2:29:58 PM:       external_node_modules:
+2:29:58 PM:         - yahoo-fantasy
+2:29:58 PM:       node_bundler: esbuild
+2:29:58 PM:   functionsDirectory: /opt/build/repo/netlify/functions
+2:29:58 PM:   redirects:
+2:29:58 PM:     - from: /auth/callback
+2:29:58 PM:       status: 200
+2:29:58 PM:       to: /.netlify/functions/auth-callback
+2:29:58 PM:     - from: /*
+      status: 200
+      to: /index.html
+  redirectsOrigin: config
+2:29:58 PM: Build failed due to a user error: Build script returned non-zero exit code: 2
+2:29:58 PM: Failing build: Failed to build site
+2:29:59 PM: Finished processing build request in 1m52.419s
